--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
-                    <mainClass>ar.edu.unlu.bd2.orm.App</mainClass>
+                    <mainClass>ar.edu.unlu.bd2.App</mainClass>
                     <systemProperties>
                         <systemProperty>
                             <key>file.encoding</key>
